# c2w-rust-project-editor

./: .dockerignore  .gitignore  Dockerfile.c2w-builder  NPM_RELEASE_STEPS.md  README.md  apply_llm_markdown_patch.out.json  create-images.sh  docker-compose.yml  package.json  tsconfig.json
.claude/skills/commit/: SKILL.md
.claude/skills/design/: SKILL.md  design-audit.md  kibo-ui-patterns.md
.github/workflows/: publish-container-files.yml
app/: globals.css
components/: rust-code-editor.tsx
components/rust-editor/: c2w-rust-project-editor.tsx  crab-strategy-compiler.ts  crab-strategy-defaults.ts  index.tsx  rust-simulator.ts  types.ts
docs/: amd64-debian-wasi.html  index.html
docs/ts/: amd64-debian-wasi.ts  c2w-rust-project-demo.ts  c2w-rust-project-editor.ts  coi-config.ts  globals.d.ts  page.ts  rust-wrapper.ts  stack-worker.ts  stack.ts  wasi-util.ts  worker-util.ts  worker.ts
src/amd64-debian-wasi/: Dockerfile  Dockerfile.cache  hydrate-rust-cache.sh
src/amd64-debian-wasi/c2w-rust-prebundle/: Cargo.toml
src/amd64-debian-wasi/c2w-rust-prebundle/src/: lib.rs
