[package]
name = "c2w-rust-prebundle"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
crossbeam = "0.8"
futures = "0.3"
mpi = "0.8"
prost = "0.14"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2"

[build-dependencies]
tonic-build = "0.14"

[features]
metrics = []
