[package]
name = "c2w-rust-prebundle"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
crossbeam = "0.8"
futures = "0.3"
ouroboros = "0.18"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_cell = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2"

[features]
metrics = []
